actor-apps/app-web/src/styles/toolbar.scss
/*
 * Copyright (C) 2015 Actor LLC. <https://actor.im>
 */

.toolbar {
  font-size: 14px;

  position: relative;
  z-index: 10;

  box-sizing: border-box;
  height: $toolbar-height;
  margin: 0;
  padding: 0 16px;

  color: $toolbar-text-color;
  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, .08);

  //&:after {
  //  position: absolute;
  //  bottom: -16px;
  //  left: 0;
  //
  //  display: block;
  //
  //  width: 100%;
  //  height: 16px;
  //
  //  content: '';
  //
  //  background-color: transparent;
  //  background-image: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
  //}

  &__peer {
    overflow: hidden;

    width: 0; // Strange fix for firefox
    &__title {
      font-size: 16px;
      font-weight: 500;
      line-height: 20px;

      display: inline-block;
      overflow: hidden;

      width: 100%;
      padding-top: 12px;

      white-space: nowrap;
      text-overflow: ellipsis;
    }
    &__presence {
      font-size: 14px;
      line-height: 16px;

      display: block;

      margin-top: 3px;

      color: $toolbar-secodary-text-color;
    }
  }

  &__controls {
    box-sizing: border-box;
    width: $activity-width;
    margin-top: 14px;
    &__search {
      position: relative;

      width: 270px;
      .material-icons {
        font-size: 18px;
        line-height: 24px;

        position: absolute;
        top: 6px;
        left: 10px;

        pointer-events: none;

        color: rgba(black, .25);
      }
      .input {
        padding-left: 34px;
      }
    }
    &__buttons {
      .button--icon {
        color: rgba(0,0,0,.25);
        &.active {
          color: $dark-sky-blue;
        }
      }
    }
  }
}

// Connection state banner
.connection-state {
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;

  position: absolute;
  z-index: 1000;
  top: 8px;
  right: 16px;
  left: 16px;

  padding: 4px 10px;

  cursor: default;
  transition: opacity 500ms 0ms, visibility 0ms 0ms;
  text-align: center;

  color: white;
  border-radius: 3px;
  text-shadow: 0 1px 1px rgba(0, 0, 0, .1);

  &--online {
    visibility: hidden;

    transition: opacity 500ms 1500ms, visibility 0ms 2s;

    opacity: 0;
    background-color: rgba($apple, .97);
  }
  &--connection {
    background-color: rgba($squash, .97);
    //opacity: 1;
    //visibility: visible;
  }
}

